refactor getBestTimeIntervals